# bertperplexity

./: .gitignore  LICENSE  README.md  pyproject.toml
bertperplexity/: BertPerplexity.py  __init__.py
test/: example.py
